--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass&display=swap');
+@import url('variables.css');
 
 * {
   box-sizing: content-box;
 }
 
 html {
-  font-family: "Overpass";
-  font-size: 0.94rem;
+  font-family: var(--main-font);
+  font-size: var(--standard-font-size);
 }
 
 body {
+  background-color: var(--black);
+  color: var(--white);
+  margin: 0;
+  padding: 0;
+}
+
+h1, p {
   margin: 0;
   padding: 0;
 }
@@ -21,4 +29,73 @@ body {
 
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.card {
+  background: linear-gradient(180deg, rgba(31,38,46,1) 0%, rgba(25,30,36,1) 100%);
+  border-radius: 30px;
+  height: 345px;
+  padding: 35px;
+  width: 345px;
+}
+
+.card h1 {
+  margin-top: 32px;
+}
+
+.card p {
+  line-height: 154%;
+  margin-bottom: 7px;
+  margin-top: 10px;
+}
+
+.card button {
+  background-color: var(--orange);
+  color: var(--gray);
+  cursor: pointer;
+  border: none;
+  border-radius: 30px;
+  display: block;
+  font-family: var(--main-font);
+  font-size: 1.05rem;
+  font-weight: bold;
+  height: 45px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.star-container {
+  align-items: center;
+  background-color: var(--white-alpha);
+  border-radius: 50%;
+  display: flex;
+  height: 50px;
+  justify-content: center;
+  margin: 0;
+  width: 50px;
+}
+
+.raiting {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0 29px 0;
+}
+
+.item {
+  background-color: var(--white-alpha);
+  border-radius: 50%;
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  width: 50px;
 }
