--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass&display=swap');
 @import url('variables.css');
+@import url('responsive.css');
 
 * {
   box-sizing: content-box;
