--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ h1, p {
   width: 50px;
 }
 
-.raiting {
+.rating {
   display: flex;
   justify-content: space-between;
   padding: 20px 0 29px 0;
@@ -109,4 +109,27 @@ h1, p {
   background-color: var(--white);
   color: var(--black);
   cursor: pointer;
+}
+
+.item.selected {
+  background-color: var(--orange);
+  color: var(--black);
+}
+
+.card.thank-you {
+  display: none;
+  text-align: center;
+}
+
+.card.thank-you .rated {
+  background-color: var(--white-alpha);
+  border-radius: 30px;
+  color: var(--orange);
+  margin: 20px auto;
+  padding: 5px;
+  width: 50%;
+}
+
+.attribution a {
+  color: var(--orange);
 }
